--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -21,30 +21,30 @@
 
 ====Translations====
 {{top}}
-*'''Afrikaans''': [[baksteen]]
-*'''Arabic''': [[طوبة]] (ṭūbah)
-*'''[[Breton]]''': [[brikenn]] {{f}} -où
-*'''Chinese''': [[磚]], [[砖]]
-*'''Czech''': [[cihla]]
-*'''Danish''': [[mursten]] {{c}} (1,2)
-*'''Dutch: ''' [[baksteen]]
-*'''Estonian''': [[telliskivi]], [[tellis]]
-*'''Finnish''': [[tiili]] (1-2)
-*'''French''': [[brique]] {{f}} (1,2)
-*'''German''': [[Ziegel]] {{m}}
-*'''Hungarian''': [[tégla]]
-*'''Ido''': [[briko]]
+*Afrikaans: [[baksteen]]
+*Arabic: [[طوبة]] (ṭūbah)
+*[[Breton]]: [[brikenn]] {{f}} -où
+*Chinese: [[磚]], [[砖]]
+*Czech: [[cihla]]
+*Danish: [[mursten]] {{c}} (1,2)
+*Dutch: [[baksteen]]
+*Estonian: [[telliskivi]], [[tellis]]
+*Finnish: [[tiili]] (1-2)
+*French: [[brique]] {{f}} (1,2)
+*German: [[Ziegel]] {{m}}
+*Hungarian: [[tégla]]
+*Ido: [[briko]]
 {{mid}}
-*'''Indonesian''': [[bata]], [[batu bata]]
-*'''Italian''': [[mattone]]
-*'''Japanese''': [[煉瓦]] ([[レンガ]], renga)
-*'''Latvian''': [[ķieģelis]] {{m}} (1,2)
-*'''Portuguese''': [[tijolo]]
-*'''Romanian''': [[cărămidă]] {{f}}
-*'''Russian''': [[кирпич]] (kirpich)
-*'''Slovene''': [[opeka]] {{f}} (1,2)
-*'''Spanish''': [[ladrillo]] {{m}}
-*'''Swahili''': [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
+*Indonesian: [[bata]], [[batu bata]]
+*Italian: [[mattone]]
+*Japanese: [[煉瓦]] ([[レンガ]], renga)
+*Latvian: [[ķieģelis]] {{m}} (1,2)
+*Portuguese: [[tijolo]]
+*Romanian: [[cărămidă]] {{f}}
+*Russian: [[кирпич]] (kirpich)
+*Slovene: [[opeka]] {{f}} (1,2)
+*Spanish: [[ladrillo]] {{m}}
+*Swahili: [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
 *[[Telugu]]: [[ఇటుక]] (1, 2)
 *'''Ukrainian''': [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
 *'''[[w: Vietnamese language|Vietnamese]]''': [[gạch]]
