--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tǎng]] (tang3)|wg=t'ang<sup>3</sup>}}
+{{cmn-hanzi|pin=[[tǎng]] ([[tang3]])|wg=t'ang<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惝]]
