--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[wéi]] (wei2)|wg=wei<sup>2</sup>}}
+{{cmn-hanzi|pin=[[wéi]] ([[wei2]])|wg=wei<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惟]]
