--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -23,7 +23,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[ruǐ]] (rui3), [[suǒ]] (suo3)|wg=jui<sup>3</sup>, so<sup>3</sup>}}
+{{cmn-hanzi|pin=[[ruǐ]] ([[rui3]]), [[suǒ]] ([[suo3]])|wg=jui<sup>3</sup>, so<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惢]]
