--- a/en/惣/惣.15608.wikitext
+++ b/en/惣/惣.15608.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[běi]] (bei3), [[zǒng]] (zong3)|wg=pei<sup>3</sup>, tsung<sup>3</sup>}}
+{{cmn-hanzi|pin=[[běi]] ([[bei3]]), [[zǒng]] ([[zong3]])|wg=pei<sup>3</sup>, tsung<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惣]]
