--- a/en/惤/惤.15609.wikitext
+++ b/en/惤/惤.15609.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiān]] (jian1)|wg=chien<sup>1</sup>}}
+{{cmn-hanzi|pin=[[jiān]] ([[jian1]])|wg=chien<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惤]]
