--- a/en/惧/惧.15612.wikitext
+++ b/en/惧/惧.15612.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=懼|pin=[[jù]] (ju4)|wg=chü<sup>4</sup>}}
+{{cmn-hanzi|tra=懼|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惧]]
