--- a/en/惨/惨.15613.wikitext
+++ b/en/惨/惨.15613.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=慘|pin=[[cǎn]] (can3)|wg=ts'an<sup>3</sup>}}
+{{cmn-hanzi|tra=慘|pin=[[cǎn]] ([[can3]])|wg=ts'an<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惨]]
