--- a/en/惩/惩.15614.wikitext
+++ b/en/惩/惩.15614.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=懲|pin=[[chéng]] (cheng2)|wg=ch'eng<sup>2</sup>}}
+{{cmn-hanzi|tra=懲|pin=[[chéng]] ([[cheng2]])|wg=ch'eng<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惩]]
