--- a/en/惪/惪.15615.wikitext
+++ b/en/惪/惪.15615.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dé]] (de2)|wg=te<sup>2</sup>}}
+{{cmn-hanzi|pin=[[dé]] ([[de2]])|wg=te<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惪]]
