--- a/en/惭/惭.15618.wikitext
+++ b/en/惭/惭.15618.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=慚|pin=[[cán]] (can2)|wg=ts'an<sup>2</sup>}}
+{{cmn-hanzi|tra=慚|pin=[[cán]] ([[can2]])|wg=ts'an<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惭]]
