--- a/en/惮/惮.15619.wikitext
+++ b/en/惮/惮.15619.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=憚|pin=[[dàn]] (dan4)|wg=tan<sup>4</sup>}}
+{{cmn-hanzi|tra=憚|pin=[[dàn]] ([[dan4]])|wg=tan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惮]]
