--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[duò]] (duo4)|wg=to<sup>4</sup>}}
+{{cmn-hanzi|pin=[[duò]] ([[duo4]])|wg=to<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惰]]
