--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -30,7 +30,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xiǎng]] (xiang3)|wg=hsiang<sup>3</sup>}}
+{{cmn-hanzi|pin=[[xiǎng]] ([[xiang3]])|wg=hsiang<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[da:想]]
