--- a/en/惷/惷.15714.wikitext
+++ b/en/惷/惷.15714.wikitext
@@ -29,7 +29,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǔn]] (chun3)|wg=ch'un<sup>3</sup>}}
+{{cmn-hanzi|pin=[[chǔn]] ([[chun3]])|wg=ch'un<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惷]]
