--- a/en/惸/惸.15628.wikitext
+++ b/en/惸/惸.15628.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[qióng]] (qiong2)|wg=ch'iung<sup>2</sup>}}
+{{cmn-hanzi|pin=[[qióng]] ([[qiong2]])|wg=ch'iung<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惸]]
