--- a/en/惽/惽.15633.wikitext
+++ b/en/惽/惽.15633.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[hūn]] (hun1)|wg=hun<sup>1</sup>}}
+{{cmn-hanzi|pin=[[hūn]] ([[hun1]])|wg=hun<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:惽]]
