--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chóu]] (chou2)|wg=ch'ou<sup>2</sup>}}
+{{cmn-hanzi|pin=[[chóu]] ([[chou2]])|wg=ch'ou<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愁]]
