--- a/en/愂/愂.15638.wikitext
+++ b/en/愂/愂.15638.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bèi]] (bei4)|wg=pei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愂]]
