--- a/en/愃/愃.15639.wikitext
+++ b/en/愃/愃.15639.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xuān]] (xuan1), [[xuǎn]] (xuan3)|wg=hsüan<sup>1</sup>, hsüan<sup>3</sup>}}
+{{cmn-hanzi|pin=[[xuān]] ([[xuan1]]), [[xuǎn]] ([[xuan3]])|wg=hsüan<sup>1</sup>, hsüan<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愃]]
