--- a/en/愍/愍.15649.wikitext
+++ b/en/愍/愍.15649.wikitext
@@ -28,7 +28,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[mǐn]] (min3)|wg=min<sup>3</sup>}}
+{{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愍]]
