--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -59,7 +59,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[yì]] (yi4)|wg=i<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yì]] ([[yi4]])|wg=i<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
