--- a/en/愓/愓.15655.wikitext
+++ b/en/愓/愓.15655.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dàng]] (dang4), [[shāng]] (shang1)|wg=tang<sup>4</sup>, shang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[dàng]] ([[dang4]]), [[shāng]] ([[shang1]])|wg=tang<sup>4</sup>, shang<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愓]]
