--- a/en/愔/愔.15656.wikitext
+++ b/en/愔/愔.15656.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[wěn]] (wen3), [[yīn]] (yin1)|wg=wen<sup>3</sup>, yin<sup>1</sup>}}
+{{cmn-hanzi|pin=[[wěn]] ([[wen3]]), [[yīn]] ([[yin1]])|wg=wen<sup>3</sup>, yin<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愔]]
