--- a/en/愖/愖.15658.wikitext
+++ b/en/愖/愖.15658.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chén]] (chen2)|wg=ch'en<sup>2</sup>}}
+{{cmn-hanzi|pin=[[chén]] ([[chen2]])|wg=ch'en<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愖]]
