--- a/en/愞/愞.15665.wikitext
+++ b/en/愞/愞.15665.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[nuò]] (nuo4)|wg=no<sup>4</sup>}}
+{{cmn-hanzi|pin=[[nuò]] ([[nuo4]])|wg=no<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愞]]
