--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -67,7 +67,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[gǎn]] (gan3)|wg=kan<sup>3</sup>}}
+{{cmn-hanzi|pin=[[gǎn]] ([[gan3]])|wg=kan<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
