--- a/en/愢/愢.15669.wikitext
+++ b/en/愢/愢.15669.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[sāi]] (sai1)|wg=sai<sup>1</sup>}}
+{{cmn-hanzi|pin=[[sāi]] ([[sai1]])|wg=sai<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 ----
