--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[léng]] (leng2)|wg=leng<sup>2</sup>}}
+{{cmn-hanzi|pin=[[léng]] ([[leng2]])|wg=leng<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愣]]
