--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -34,7 +34,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kuì]] (kui4)|wg=k'uei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[kuì]] ([[kui4]])|wg=k'uei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
