--- a/en/愭/愭.15680.wikitext
+++ b/en/愭/愭.15680.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[qí]] (qi2), [[xùn]] (xun4)|wg=ch'i<sup>2</sup>, hsün<sup>4</sup>}}
+{{cmn-hanzi|pin=[[qí]] ([[qi2]]), [[xùn]] ([[xun4]])|wg=ch'i<sup>2</sup>, hsün<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愭]]
