--- a/en/愳/愳.15686.wikitext
+++ b/en/愳/愳.15686.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jù]] (ju4)|wg=chü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愳]]
