--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=恺|pin=[[kǎi]] (kai3)|wg=k'ai<sup>3</sup>}}
+{{cmn-hanzi|sim=恺|pin=[[kǎi]] ([[kai3]])|wg=k'ai<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愷]]
