--- a/en/愸/愸.15691.wikitext
+++ b/en/愸/愸.15691.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zhěng]] (zheng3)|wg=cheng<sup>3</sup>}}
+{{cmn-hanzi|pin=[[zhěng]] ([[zheng3]])|wg=cheng<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愸]]
