--- a/en/愺/愺.15693.wikitext
+++ b/en/愺/愺.15693.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cǎo]] (cao3)|wg=ts'ao<sup>3</sup>}}
+{{cmn-hanzi|pin=[[cǎo]] ([[cao3]])|wg=ts'ao<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愺]]
