--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cǎo]] (cao3), [[shèn]] (shen4)|wg=ts'ao<sup>3</sup>, shen<sup>4</sup>}}
+{{cmn-hanzi|pin=[[cǎo]] ([[cao3]]), [[shèn]] ([[shen4]])|wg=ts'ao<sup>3</sup>, shen<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愼]]
