--- a/en/愾/愾.15697.wikitext
+++ b/en/愾/愾.15697.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=忾|pin=[[kài]] (kai4)|wg=k'ai<sup>4</sup>}}
+{{cmn-hanzi|sim=忾|pin=[[kài]] ([[kai4]])|wg=k'ai<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愾]]
