--- a/en/慁/慁.15700.wikitext
+++ b/en/慁/慁.15700.wikitext
@@ -20,7 +20,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[hùn]] (hun4)|wg=hun<sup>4</sup>}}
+{{cmn-hanzi|pin=[[hùn]] ([[hun4]])|wg=hun<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慁]]
