--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yǎng]] (yang3)|wg=yang<sup>3</sup>}}
+{{cmn-hanzi|pin=[[yǎng]] ([[yang3]])|wg=yang<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慃]]
