--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -31,7 +31,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=栗|pin=[[lì]] (li4)|wg=li<sup>4</sup>}}
+{{cmn-hanzi|sim=栗|pin=[[lì]] ([[li4]])|wg=li<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慄]]
