--- a/en/慆/慆.15705.wikitext
+++ b/en/慆/慆.15705.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[qiè]] (qie4), [[tāo]] (tao1)|wg=ch'ieh<sup>4</sup>, t'ao<sup>1</sup>}}
+{{cmn-hanzi|pin=[[qiè]] ([[qie4]]), [[tāo]] ([[tao1]])|wg=ch'ieh<sup>4</sup>, t'ao<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慆]]
