--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yīn]] (yin1)|wg=yin<sup>1</sup>}}
+{{cmn-hanzi|pin=[[yīn]] ([[yin1]])|wg=yin<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慇]]
