--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=态|pin=[[huǎng]] (huang3), [[tài]] (tai4)|wg=huang<sup>3</sup>, t'ai<sup>4</sup>}}
+{{cmn-hanzi|sim=态|pin=[[huǎng]] ([[huang3]]), [[tài]] ([[tai4]])|wg=huang<sup>3</sup>, t'ai<sup>4</sup>}}
 # {{defn|Mandarin}}
 ----
 ==Vietnamese==
