--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[huāng]] (huang1)|wg=huang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[huāng]] ([[huang1]])|wg=huang<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慌]]
