--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=愠|pin=[[yùn]] (yun4), [[zhé]] (zhe2)|wg=yün<sup>4</sup>, che<sup>2</sup>}}
+{{cmn-hanzi|sim=愠|pin=[[yùn]] ([[yun4]]), [[zhé]] ([[zhe2]])|wg=yün<sup>4</sup>, che<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慍]]
