--- a/en/慏/慏.15715.wikitext
+++ b/en/慏/慏.15715.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[mǐng]] (ming3)|wg=ming<sup>3</sup>}}
+{{cmn-hanzi|pin=[[mǐng]] ([[ming3]])|wg=ming<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慏]]
