--- a/en/慕/慕.15721.wikitext
+++ b/en/慕/慕.15721.wikitext
@@ -29,7 +29,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[mù]] (mu4)|wg=mu<sup>4</sup>}}
+{{cmn-hanzi|pin=[[mù]] ([[mu4]])|wg=mu<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慕]]
