--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -1,25 +1,35 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=5333<sub>0</sub>|canj=戈口心 (IRP)}}
+
 # [[feel]], [[perceive]], [[emotion]]
+
 ====References====
 {{Han ref|kx=0395.210|dkj=10953|dj=0733.070|hdz=42321.020|uh=611F|ud=24863|bh=B750|bd=46928}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gam2}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=3|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[かん]] (kan)|kun=[[かんじる]] (kanjiru)}}
 
-===Compouds===
+===Compounds===
 *[[感温]]
 *[[感化]]
 *[[感懐]]
@@ -59,15 +69,21 @@
 *[[感涙]]
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=감|eumhun=|rv=gam|mr=kam|y=kam}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gǎn]] ([[gan3]])|wg=kan<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
