--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=惭|pin=[[cán]] (can2)|wg=ts'an<sup>2</sup>}}
+{{cmn-hanzi|sim=惭|pin=[[cán]] ([[can2]])|wg=ts'an<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慚]]
