--- a/en/慜/慜.15728.wikitext
+++ b/en/慜/慜.15728.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[mǐn]] (min3)|wg=min<sup>3</sup>}}
+{{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慜]]
