--- a/en/慝/慝.15729.wikitext
+++ b/en/慝/慝.15729.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tè]] (te4)|wg=t'e<sup>4</sup>}}
+{{cmn-hanzi|pin=[[tè]] ([[te4]])|wg=t'e<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慝]]
