--- a/en/慟/慟.15731.wikitext
+++ b/en/慟/慟.15731.wikitext
@@ -28,7 +28,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=恸|pin=[[tòng]] (tong4)|wg=t'ung<sup>4</sup>}}
+{{cmn-hanzi|sim=恸|pin=[[tòng]] ([[tong4]])|wg=t'ung<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慟]]
