--- a/en/昹/昹.16994.wikitext
+++ b/en/昹/昹.16994.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[ǎi]] (ai3)|wg=ai<sup>3</sup>}}
+{{cmn-hanzi|pin=[[ǎi]] ([[ai3]])|wg=ai<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昹]]
