--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -41,7 +41,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[áng]] (ang2)|wg=ang<sup>2</sup>}}
+{{cmn-hanzi|pin=[[áng]] ([[ang2]])|wg=ang<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
