--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -56,6 +56,7 @@ See [[WikiSaurus:vomit]].
 *Maltese: [[rimettar]]
 {{mid}}
 *Norwegian: [[oppkast]] {{n}}
+*Polish: [[wymiociony]] {{f}}
 *Portuguese: [[vômito]] {{m}}
 *Russian: [[блевотина]] {{f}}, [[рвота]] {{f}}
 *Spanish: [[vómito]] {{m}}
