--- a/en/旣/旣.16908.wikitext
+++ b/en/旣/旣.16908.wikitext
@@ -22,7 +22,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jì]] (ji4), [[xì]] (xi4)|wg=chi<sup>4</sup>, hsi<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[xì]] ([[xi4]])|wg=chi<sup>4</sup>, hsi<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旣]]
