--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xún]] (xun2)|wg=hsün<sup>2</sup>}}
+{{cmn-hanzi|pin=[[xún]] ([[xun2]])|wg=hsün<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旬]]
