--- a/en/旯/旯.16919.wikitext
+++ b/en/旯/旯.16919.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[lá]] (la2), [[xù]] (xu4)|wg=la<sup>2</sup>, hsü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[lá]] ([[la2]]), [[xù]] ([[xu4]])|wg=la<sup>2</sup>, hsü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旯]]
