--- a/en/旰/旰.16920.wikitext
+++ b/en/旰/旰.16920.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[gàn]] (gan4), [[hàn]] (han4)|wg=kan<sup>4</sup>, han<sup>4</sup>}}
+{{cmn-hanzi|pin=[[gàn]] ([[gan4]]), [[hàn]] ([[han4]])|wg=kan<sup>4</sup>, han<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旰]]
