--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -33,7 +33,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǔn]] (chun3), [[hàn]] (han4)|wg=ch'un<sup>3</sup>, han<sup>4</sup>}}
+{{cmn-hanzi|pin=[[chǔn]] ([[chun3]]), [[hàn]] ([[han4]])|wg=ch'un<sup>3</sup>, han<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
