--- a/en/旵/旵.16925.wikitext
+++ b/en/旵/旵.16925.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[hǎn]] (han3)|wg=h'an<sup>3</sup>}}
+{{cmn-hanzi|pin=[[hǎn]] ([[han3]])|wg=h'an<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旵]]
