--- a/en/时/时.16926.wikitext
+++ b/en/时/时.16926.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=時|pin=[[shí]] (shi2)|wg=shih<sup>2</sup>}}
+{{cmn-hanzi|tra=時|pin=[[shí]] ([[shi2]])|wg=shih<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
