--- a/en/旸/旸.16928.wikitext
+++ b/en/旸/旸.16928.wikitext
@@ -10,7 +10,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=暘|pin=[[yáng]] (yang2)|wg=yang<sup>2</sup>}}
+{{cmn-hanzi|tra=暘|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旸]]
