--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[wàng]] (wang4)|wg=wang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[wàng]] ([[wang4]])|wg=wang<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旺]]
