--- a/en/旾/旾.16934.wikitext
+++ b/en/旾/旾.16934.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chūn]] (chun1)|wg=ch'un<sup>1</sup>}}
+{{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:旾]]
