--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kūn]] (kun1)|wg=k'un<sup>1</sup>}}
+{{cmn-hanzi|pin=[[kūn]] ([[kun1]])|wg=k'un<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昆]]
