--- a/en/昋/昋.16947.wikitext
+++ b/en/昋/昋.16947.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[guì]] (gui4)|wg=kuei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[guì]] ([[gui4]])|wg=kuei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昋]]
