--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -29,7 +29,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chāng]] (chang1)|wg=ch'ang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[chāng]] ([[chang1]])|wg=ch'ang<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昌]]
