--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -63,7 +63,7 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[míng]] (ming2)|wg=ming<sup>2</sup>}}
+{{cmn-hanzi|pin=[[míng]] ([[ming2]])|wg=ming<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
