--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[hūn]] (hun1)|wg=hun<sup>1</sup>}}
+{{cmn-hanzi|pin=[[hūn]] ([[hun1]])|wg=hun<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昏]]
