--- a/en/昐/昐.16952.wikitext
+++ b/en/昐/昐.16952.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cuò]] (cuo4), [[fēn]] (fen1), [[xī]] (xi1)|wg=ts'o<sup>4</sup>, fen<sup>1</sup>, hsi<sup>1</sup>}}
+{{cmn-hanzi|pin=[[cuò]] ([[cuo4]]), [[fēn]] ([[fen1]]), [[xī]] ([[xi1]])|wg=ts'o<sup>4</sup>, fen<sup>1</sup>, hsi<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昐]]
