--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -43,7 +43,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xí]] (xi2)|wg=hsi<sup>2</sup>}}
+{{cmn-hanzi|pin=[[xí]] ([[xi2]])|wg=hsi<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昔]]
