--- a/en/昕/昕.16957.wikitext
+++ b/en/昕/昕.16957.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cǎn]] (can3), [[xīn]] (xin1)|wg=ts'an<sup>3</sup>, hsin<sup>1</sup>}}
+{{cmn-hanzi|pin=[[cǎn]] ([[can3]]), [[xīn]] ([[xin1]])|wg=ts'an<sup>3</sup>, hsin<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昕]]
