--- a/en/昗/昗.16959.wikitext
+++ b/en/昗/昗.16959.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zè]] (ze4)|wg=tse<sup>4</sup>}}
+{{cmn-hanzi|pin=[[zè]] ([[ze4]])|wg=tse<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昗]]
