--- a/en/昘/昘.16960.wikitext
+++ b/en/昘/昘.16960.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fǎng]] (fang3)|wg=fang<sup>3</sup>}}
+{{cmn-hanzi|pin=[[fǎng]] ([[fang3]])|wg=fang<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昘]]
