--- a/en/昚/昚.16962.wikitext
+++ b/en/昚/昚.16962.wikitext
@@ -10,7 +10,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[shèn]] (shen4)|wg=shen<sup>4</sup>}}
+{{cmn-hanzi|pin=[[shèn]] ([[shen4]])|wg=shen<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昚]]
