--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -17,7 +17,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yáng]] (yang2)|wg=yang<sup>2</sup>}}
+{{cmn-hanzi|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昜]]
