--- a/en/昝/昝.16965.wikitext
+++ b/en/昝/昝.16965.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zǎn]] (zan3)|wg=tsan<sup>3</sup>}}
+{{cmn-hanzi|pin=[[zǎn]] ([[zan3]])|wg=tsan<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昝]]
