--- a/en/昞/昞.16966.wikitext
+++ b/en/昞/昞.16966.wikitext
@@ -20,7 +20,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bǐng]] (bing3), [[pèi]] (pei4)|wg=ping<sup>3</sup>, p'ei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bǐng]] ([[bing3]]), [[pèi]] ([[pei4]])|wg=ping<sup>3</sup>, p'ei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昞]]
