--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -77,7 +77,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xīng]] (xing1)|wg=hsing<sup>1</sup>}}
+{{cmn-hanzi|pin=[[xīng]] ([[xing1]])|wg=hsing<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
