--- a/en/昡/昡.16969.wikitext
+++ b/en/昡/昡.16969.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xuàn]] (xuan4)|wg=hsüan<sup>4</sup>}}
+{{cmn-hanzi|pin=[[xuàn]] ([[xuan4]])|wg=hsüan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昡]]
