--- a/en/昢/昢.16970.wikitext
+++ b/en/昢/昢.16970.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[pěi]] (pei3)|wg=p'ei<sup>3</sup>}}
+{{cmn-hanzi|pin=[[pěi]] ([[pei3]])|wg=p'ei<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昢]]
