--- a/en/昤/昤.16972.wikitext
+++ b/en/昤/昤.16972.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[līng]] (ling1)|wg=ling<sup>1</sup>}}
+{{cmn-hanzi|pin=[[līng]] ([[ling1]])|wg=ling<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昤]]
