--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -64,7 +64,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chūn]] (chun1)|wg=ch'un<sup>1</sup>}}
+{{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
