--- a/en/昧/昧.16975.wikitext
+++ b/en/昧/昧.16975.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[mèi]] (mei4)|wg=mei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[mèi]] ([[mei4]])|wg=mei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昧]]
