--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -30,7 +30,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zuó]] (zuo2)|wg=tso<sup>2</sup>}}
+{{cmn-hanzi|pin=[[zuó]] ([[zuo2]])|wg=tso<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昨]]
