--- a/en/昪/昪.16978.wikitext
+++ b/en/昪/昪.16978.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[biàn]] (bian4)|wg=pien<sup>4</sup>}}
+{{cmn-hanzi|pin=[[biàn]] ([[bian4]])|wg=pien<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昪]]
