--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xià]] (xia4), [[zhāo]] (zhao1)|wg=hsia<sup>4</sup>, chao<sup>1</sup>}}
+{{cmn-hanzi|pin=[[xià]] ([[xia4]]), [[zhāo]] ([[zhao1]])|wg=hsia<sup>4</sup>, chao<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昭]]
