--- a/en/昮/昮.16982.wikitext
+++ b/en/昮/昮.16982.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zòng]] (zong4)|wg=tsung<sup>4</sup>}}
+{{cmn-hanzi|pin=[[zòng]] ([[zong4]])|wg=tsung<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昮]]
