--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -36,7 +36,7 @@ Radical: [[日]] + [[正]]
 
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[shì]] ([[shi4|shi<sup>4</sup>]])|wg=shih<sup>4</sup>}}
+{{cmn-hanzi|pin=[[shì]] ([[shi4]])|wg=shih<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 
