--- a/en/昰/昰.16984.wikitext
+++ b/en/昰/昰.16984.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[shì]] (shi4)|wg=shih<sup>4</sup>}}
+{{cmn-hanzi|pin=[[shì]] ([[shi4]])|wg=shih<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昰]]
