--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yì]] (yi4), [[yù]] (yu4)|wg=i<sup>4</sup>, yü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yì]] ([[yi4]]), [[yù]] ([[yu4]])|wg=i<sup>4</sup>, yü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昱]]
