--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -36,7 +36,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[mǎo]] (mao3), [[nǐ]] (ni3), [[zhì]] (zhi4)|wg=mao<sup>3</sup>, ni<sup>3</sup>, chih<sup>4</sup>}}
+{{cmn-hanzi|pin=[[mǎo]] ([[mao3]]), [[nǐ]] ([[ni3]]), [[zhì]] ([[zhi4]])|wg=mao<sup>3</sup>, ni<sup>3</sup>, chih<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昴]]
