--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[wēn]] (wen1), [[yùn]] (yun4)|wg=wen<sup>1</sup>, yün<sup>4</sup>}}
+{{cmn-hanzi|pin=[[wēn]] ([[wen1]]), [[yùn]] ([[yun4]])|wg=wen<sup>1</sup>, yün<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昷]]
