--- a/en/昸/昸.16993.wikitext
+++ b/en/昸/昸.16993.wikitext
@@ -8,7 +8,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dōng]] (dong1), [[huàng]] (huang4)|wg=tung<sup>1</sup>, huang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[dōng]] ([[dong1]]), [[huàng]] ([[huang4]])|wg=tung<sup>1</sup>, huang<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昸]]
