--- a/en/显/显.16999.wikitext
+++ b/en/显/显.16999.wikitext
@@ -17,7 +17,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=顯|pin=[[xiǎn]] (xian3)|wg=hsien<sup>3</sup>}}
+{{cmn-hanzi|tra=顯|pin=[[xiǎn]] ([[xian3]])|wg=hsien<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:显]]
