--- a/en/昿/昿.17000.wikitext
+++ b/en/昿/昿.17000.wikitext
@@ -17,7 +17,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kuàng]] (kuang4)|wg=k'uang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[kuàng]] ([[kuang4]])|wg=k'uang<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昿]]
