--- a/en/晁/晁.17002.wikitext
+++ b/en/晁/晁.17002.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cháo]] (chao2)|wg=ch'ao<sup>2</sup>}}
+{{cmn-hanzi|pin=[[cháo]] ([[chao2]])|wg=ch'ao<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:晁]]
