--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -26,7 +26,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 *Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
 *Norwegian: [[innhegning]] {{f}}/{{m}}, [[kve]] {{n}}
 {{trans-mid}}
-*Russian: [[загон]] (zagón) {{m}}
+*Russian: {{t|ru|загон|m}} (zagón)
 *Spanish: [[corral]] {{m}}
 {{trans-bottom}}
 
