--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -146,7 +146,10 @@ Compare Spanish ''[[como]]'', ''[[cómo]]''.
 # [[how]]
 #:'''''Come''' stai?'' - How are you?
 # [[as]], [[like]]
-#:''Blu '''come''' il mare'' - As blue as the sea; blue like the sea
+#:''Blu '''come''' il mare'' - As blue as the sea; Blue like the sea
+
+====Derived terms====
+*[[come mai]]
 
 ===Conjunction===
 '''come'''
@@ -154,6 +157,8 @@ Compare Spanish ''[[como]]'', ''[[cómo]]''.
 # [[as soon as]]
 #:'''''Come''' arrivò...'' - As soon as he arrived...
 
+[[Category:Italian adverbs]]
+[[Category:Italian conjunctions]]
 ----
 
 ==Spanish==
