--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -15,10 +15,10 @@
 # An act of stabbing or [[thrust|thrusting]] with an object.
 # A wound made by stabbing.
 # Pain inflicted on a person's feelings.
-#(''informal'') An [[attempt]].
+# {{informal}} An [[attempt]].
 #:''I'll give this [[thankless]] task a '''stab'''.''
 # [[Criticism]].
-[[Category:English concrete nouns]]
+
 ====Derived terms====
 *[[have a stab at]]
 *[[stabbing]]<!--adjective, noun-->
@@ -41,7 +41,7 @@
 
 {{trans-top|Attempt}}
 {{trans-mid}}
-* Russian: [[попытка]] {{f}}
+*Russian: [[попытка]] {{f}}
 {{trans-bottom}}
 
 {{trans-top|Criticism}}
@@ -51,10 +51,10 @@
 ===Verb===
 {{en-verb|stab|b|ed}}
 
-#{{transitive}} To pierce or to wound with a pointed tool or [[weapon]], especially a [[knife]] or [[dagger]].
-#{{transitive}} To aim a blow with a weapon or a finger ('''at''' someone or something).
-#{{intransitive}} To aim a [[blow]] with a weapon or a [[finger]].
-#{{intransitive}} To cause a [[sharp]], painful [[sensation]].
+# {{transitive}} To pierce or to wound with a pointed tool or [[weapon]], especially a [[knife]] or [[dagger]].
+# {{transitive}} To aim a blow with a weapon or a finger ('''at''' someone or something).
+# {{intransitive}} To aim a [[blow]] with a weapon or a [[finger]].
+# {{intransitive}} To cause a [[sharp]], painful [[sensation]].
 
 ====Derived terms====
 *[[stabber]] ''noun''
@@ -84,6 +84,7 @@
 *[[bat]]s
 *[[tab]]s
 
+[[Category:English concrete nouns]]
 [[Category:English intransitive verbs]]
 [[Category:English transitive verbs]]
 
@@ -94,7 +95,7 @@
 ===Noun===
 '''stab''' {{c}}
 
-#[[staff]]
+# [[staff]]
 
 [[Category:Danish nouns]]
 
@@ -105,7 +106,7 @@
 ===Noun===
 '''stab''' {{c}}
 
-#[[staff]]
+# [[staff]]
 
 [[Category:Swedish nouns]]
 
