--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -25,6 +25,7 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 ====Translations====
 {{trans-top|point in the sky vertically above a given position or observer}}
 *Czech: [[nadhlavník]] {{m}}
+*Polish: [[zenit]] {{m}}, [[apogeum]] {{n}}
 {{trans-mid}}
 {{trans-bottom}}
 =====Translations to be checked=====
@@ -40,7 +41,6 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 
 *{{ttbc|Italian}}: [[zenit]] {{m}}
 *{{ttbc|Japanese}}: [[絶頂]], [[頂点]]; [[天頂]] (astronomy)
-*{{ttbc|Polish}}: [[zenit]] {{m}}, [[apogeum]] {{n}}
 *{{ttbc|Portuguese}}: [[zênite]] {{m}}
 *{{ttbc|Spanish}}: [[cenit]] {{m}}, [[zenit]] {{m}}, [[auge]] {{m}}
 
