--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -72,6 +72,8 @@
 
 # Made of brick
 #:''All that was left after the fire was the '''brick''' chimney''.
+====Translations====
+*Russian: [[кирпичный]] (kirpíčnyj)
 
 ===Verb===
 {{en-verb}}
@@ -80,7 +82,6 @@
 # (slang) To be a high state of anxiety: "Bricking it"
 
 ====Translations====
-*Russian: [[кирпичный]] (kirpichniy)
 *Ukrainian: [[цегельний]] (ceh'''e'''l'nyj) {{m}}
 *Vietnamese: bằng gạch
 
