--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -23,6 +23,7 @@
 ====Translations====
 {{trans-top|hardened block used for building}}
 *Czech: [[cihla]] {{f}}
+*Japanese: [[煉瓦]] ([[れんが]] renga)
 {{trans-mid}}
 *Russian: [[кирпич]] (kirpíč) {{m}}
 {{trans-bottom}}
@@ -44,7 +45,6 @@
 
 *{{ttbc|Indonesian}}: [[bata]], [[batu bata]]
 *{{ttbc|Italian}}: [[mattone]]
-*{{ttbc|Japanese}}: [[煉瓦]] ([[レンガ]], renga)
 *{{ttbc|Latvian}}: [[ķieģelis]] {{m}} (1,2)
 *{{ttbc|Portuguese}}: [[tijolo]]
 *{{ttbc|Romanian}}: [[cărămidă]] {{f}}
