--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -1,29 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2429<sub>1</sub>|canj=人大一火 (OKMF)}}
+
 # {{defn|Han}}
+
 ====References====
 {{Han ref|kx=0109.171|dkj=00818|dj=0232.200|hdz=10172.090|uh=5037|ud=20535|bh=D0D2|bd=53458}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=noi6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[だい]] (dai), [[ない]] (nai)|kun=[[なんじ]] (nanji)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[nài]] ([[nai4]]), [[zhì]] ([[zhi4]])|wg=nai<sup>4</sup>, chih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
+
 ----
+
 ==Shanghainese==
-===hanzi===
-倷(nA1) 
+
+===Hanzi===
+倷(nA1)
+
 # [[y'all|you all]] , you (pl.)
+
 [[fr:倷]]
