--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -29,6 +29,7 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 *Finnish: [[zeniitti]]
 {{trans-mid}}
 *Polish: [[zenit]] {{m}}, [[apogeum]] {{n}}
+*Portuguese: [[zênite]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|peak}}
@@ -46,7 +47,6 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 *{{ttbc|Interlingua}}: [[zenit]]
 *{{ttbc|Italian}}: [[zenit]] {{m}}
 *{{ttbc|Japanese}}: [[絶頂]], [[頂点]]; [[天頂]] (astronomy)
-*{{ttbc|Portuguese}}: [[zênite]] {{m}}
 *{{ttbc|Spanish}}: [[cenit]] {{m}}, [[zenit]] {{m}}, [[auge]] {{m}}
 
 [[Category:English nouns that lack inflection template]]
