--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -30,6 +30,7 @@ From {{OF.}} ''[[conte]]''
 *Italian: [[conte]]
 *Lithuanian: [[grafas]] {{m}}
 {{trans-mid}}
+*Old English: [[eorl]] {{m}}
 *Polish: [[hrabia]] {{m}}
 *Portuguese: [[conde]] {{m}}
 *Romanian: [[conte]] {{m}}
