--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -51,6 +51,7 @@
 *Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
 *Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
+*Lithuanian: [[Jungtinės Amerikos Valstijos]], [[JAV]]
 *Malay: [[Amerika Syarikat]]
 *Maltese: [[Stati Uniti ta' l-Amerika]], [[l-Istati Uniti ta' l-Amerika]], (''short form'') [[Stati Uniti]], [[l-Istati Uniti]], [[USA]]
 *Navajo: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
